# pico-examples

./: README.md
.github/workflows/: ci.yml
api-aggregator/: README.md  pyproject.toml
api-aggregator/src/api_aggregator/: __init__.py  app.py
api-aggregator/tests/: test_aggregator.py
dockerized-orders/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  smoke.sh
dockerized-orders/config/: application.yaml  compose.yaml
dockerized-orders/k8s/: configmap.yaml  deployment.yaml  service.yaml
dockerized-orders/src/dockerized_orders/: __init__.py  app.py  main.py
dockerized-orders/tests/: test_dockerized_orders.py
observability-service/: Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  smoke.sh
observability-service/config/: application.yaml
observability-service/src/observability_service/: __init__.py  app.py  main.py
observability-service/tests/: test_observability.py
order-service/: README.md  pyproject.toml
order-service/src/order_service/: __init__.py  app.py
order-service/tests/: test_order_service.py
runtime-config/: README.md  pyproject.toml
runtime-config/src/runtime_config/: __init__.py  app.py
runtime-config/tests/: test_runtime_config.py
secure-notes/: README.md  pyproject.toml
secure-notes/src/secure_notes/: __init__.py  app.py
secure-notes/tests/: test_secure_notes.py
worker-invoicing/: README.md  pyproject.toml
worker-invoicing/src/worker_invoicing/: __init__.py  app.py
worker-invoicing/tests/: test_invoicing.py
