[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pico-example-dockerized-orders"
version = "0.1.0"
description = "Deployable order service: Docker Compose with Postgres and Redis, Kubernetes manifests"
requires-python = ">=3.11"
dependencies = [
    "pico-fastapi>=0.3.1",
    "pico-sqlalchemy>=0.5.0",
    "pico-caching>=0.1.0",
    "pico-data-redis>=0.1.0",
    "pico-actuator>=0.2.0",
    "pico-ioc[yaml]>=2.3.3",
    "uvicorn>=0.30",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio", "pico-testing>=0.2.0", "httpx", "fakeredis>=2.23"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pico_module = "dockerized_orders"
