[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pico-example-order-service"
version = "0.1.0"
description = "REST CRUD over SQLAlchemy with transactional integrity"
requires-python = ">=3.11"
dependencies = [
    "pico-fastapi>=0.3.1",
    "pico-sqlalchemy>=0.5.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio", "pico-testing>=0.2.0", "httpx"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pico_module = "order_service"
